# generative-ai-playground

./: .env.example  Makefile  README.md  alembic.ini  automation_example.py  docker-compose.yml  prompt_engineering.py  pyproject.toml  requirements.txt  summarization.py  text_generation.py
agent-engine/: approval_flow.py  executor.py  memory_manager.py  planner.py
apps/api/: Dockerfile  requirements.txt
apps/pipeline-kotlin/: build.gradle.kts
apps/web/: Dockerfile  globals.css  next.config.ts  package.json
apps/worker/: Dockerfile  __init__.py  celery_app.py
cost-analytics/: cost_api.py  dashboard.sql
data/: chat_repository.py  vector_store.py
docs/: README.md  SYSTEM_DOCUMENTATION.md  nexusai-adk-integration-plan.md  nexusai-documentacao.md  nexusai-enterprise-architecture.md  nexusai-implementation-blueprint.md  nexusai-production-hardening-plan.md
docs/reference/rust/: Cargo.toml
docs/reference/rust/src/: main.rs
evaluation/: benchmark_runner.py  golden_dataset.json  offline_eval.py
feature-flags/: model_rollout.yaml  rollout_manager.py
gateway-rust/: Cargo.toml  Dockerfile
gateway-rust/src/: main.rs
governance/: immutable_audit.py
load-testing/: locustfile.py  stress_test.yaml
mesh-go/: Dockerfile  go.mod  main.go
policy-engine/: policies.yaml  policy_engine.py
prompt-registry/: evaluation_metrics.yaml  prompt_v1.yaml  prompt_v2.yaml
runtime-control/: backpressure.py
security/: injection_detector.py  jailbreak_classifier.py  output_validator.py
tests/: test_backpressure_and_audit.py  test_policy_and_budget.py
(+80 files in other folders)
